<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/action_home"
        android:showAsAction="always"/>

    <item android:id="@+id/action_myloc"
        android:icon="@drawable/ic_my_location_white_24dp"
        android:title="@string/action_myloc"
        android:showAsAction="always"  />

    <item android:id="@+id/action_list"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/action_list"
        android:showAsAction="always"  />

    <item android:id="@+id/action_info"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/action_info"
        android:showAsAction="never"  />

    <item android:id="@+id/action_test_func_1"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/action_test1"
        android:showAsAction="never"  />
</menu>